--- a/ios/fluapp.xcodeproj/xcshareddata/xcschemes/fluapp.xcscheme
+++ b/ios/fluapp.xcodeproj/xcshareddata/xcschemes/fluapp.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Quantified Flu.app"
+               BuildableName = "OH Data Port.app"
                BlueprintName = "fluapp"
                ReferencedContainer = "container:fluapp.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Quantified Flu.app"
+            BuildableName = "OH Data Port.app"
             BlueprintName = "fluapp"
             ReferencedContainer = "container:fluapp.xcodeproj">
          </BuildableReference>
@@ -92,7 +92,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Quantified Flu.app"
+            BuildableName = "OH Data Port.app"
             BlueprintName = "fluapp"
             ReferencedContainer = "container:fluapp.xcodeproj">
          </BuildableReference>
@@ -109,7 +109,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Quantified Flu.app"
+            BuildableName = "OH Data Port.app"
             BlueprintName = "fluapp"
             ReferencedContainer = "container:fluapp.xcodeproj">
          </BuildableReference>
